# bot-sentry

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.mingw  config.h.in  configure  configure.ac  mingw-purple-dev.sh
nsis/: Arabic.nsh  Czech.nsh  English.nsh  German.nsh  Italian.nsh  Norwegian.nsh  Russian.nsh  Spanish.nsh  installer.nsi
po/: LINGUAS  Makevars.in  POTFILES.in  ar.po  cs.po  de.po  es.po  it.po  no.po  ru.po
src/: bot-sentry.c
